kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploiement-app-php
  labels:
    app.kubernetes.io/name: app-php
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-php
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-php
        app.kubernetes.io/component: web
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - app-php
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - web
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: php-app-container
        image: hadv83/php-app:v3
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi 
          limits:
            cpu: 1
            memory: 1Gi
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3 
        volumeMounts:
        - name: volume-images
          mountPath: /app/images

      volumes:
      - name: volume-images
        persistentVolumeClaim:
          claimName: images-pvc
