kubernetes/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-svc-nodeport
spec:
  selector:
    app.kubernetes.io/name: app-php
    app.kubernetes.io/component: web
  ports:
  - protocol: TCP
    name: http-svc
    port: 80
    nodePort: 30500
    targetPort: http
  type: NodePort
