kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-svc
spec:
  selector:
    app.kubernetes.io/name: app-php
    app.kubernetes.io/component: web
  ports:
  - protocol: TCP
    name: http-svc
    port: 80
    targetPort: http
